// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pills should render a basic pill 1`] = `
<InjectIntl(Pills)
  ariaLabel="Example of a Basic Pill"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <Pills
    ariaLabel="Example of a Basic Pill"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={false}
  >
    <div
      aria-describedby="terra-pills-group-interaction-hint"
      aria-label="Example of a Basic Pill"
      aria-live="polite"
      aria-relevant="removals"
      className="pills-group"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="list"
      tabIndex="-1"
    >
      <VisuallyHiddenText
        aria-hidden="true"
        id="terra-pills-group-interaction-hint"
        text="Terra.pills.hint.pillList"
      >
        <span
          aria-hidden="true"
          className="visually-hidden-text"
          id="terra-pills-group-interaction-hint"
        >
          Terra.pills.hint.pillList
        </span>
      </VisuallyHiddenText>
      <InjectIntl(Pill)
        id="basic-pill"
        isBasicPill={true}
        key=".0"
        label="Basic Pill"
        onRemove={[Function]}
      >
        <Pill
          id="basic-pill"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isBasicPill={true}
          label="Basic Pill"
          onRemove={[Function]}
        >
          <div
            className="pill-list-item"
            role="listitem"
          >
            <div
              aria-describedby="interaction-hint-basic-pill"
              className="pill"
              data-terra-pill={true}
              data-terra-pills-show-focus-styles={true}
              id="basic-pill"
              role="text"
            >
              <span
                className="pill-label"
              >
                Basic Pill
              </span>
            </div>
          </div>
        </Pill>
      </InjectIntl(Pill)>
    </div>
  </Pills>
</InjectIntl(Pills)>
`;

exports[`Pills should render a basic pill with roll up 1`] = `
<InjectIntl(Pills)
  ariaLabel="Example of a basic Pill with roll up"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isSingleLine={true}
>
  <Pills
    ariaLabel="Example of a basic Pill with roll up"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={true}
  >
    <div
      aria-describedby="terra-pills-group-interaction-hint"
      aria-label="Example of a basic Pill with roll up"
      aria-live="polite"
      aria-relevant="removals"
      className="pills-group"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="list"
      tabIndex="-1"
    >
      <VisuallyHiddenText
        aria-hidden="true"
        id="terra-pills-group-interaction-hint"
        text="Terra.pills.hint.pillList, Terra.pills.hint.rollupNotVisible"
      >
        <span
          aria-hidden="true"
          className="visually-hidden-text"
          id="terra-pills-group-interaction-hint"
        >
          Terra.pills.hint.pillList, Terra.pills.hint.rollupNotVisible
        </span>
      </VisuallyHiddenText>
      <InjectIntl(Pill)
        id="basic-pill"
        isBasicPill={true}
        key=".0"
        label="Basic Pill"
        onRemove={[Function]}
      >
        <Pill
          id="basic-pill"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isBasicPill={true}
          label="Basic Pill"
          onRemove={[Function]}
        >
          <div
            className="pill-list-item"
            role="listitem"
          >
            <div
              aria-describedby="interaction-hint-basic-pill"
              className="pill"
              data-terra-pill={true}
              data-terra-pills-show-focus-styles={true}
              id="basic-pill"
              role="text"
            >
              <span
                className="pill-label"
              >
                Basic Pill
              </span>
            </div>
          </div>
        </Pill>
      </InjectIntl(Pill)>
      <InjectIntl(RollUpPill)
        isSingleLine={true}
        onSelectRollUp={[Function]}
        rollupCount={1}
      >
        <RollUpPill
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isSingleLine={true}
          onSelectRollUp={[Function]}
          rollupCount={1}
        >
          <div
            className="pill-list-item"
            role="listitem"
          >
            <button
              aria-describedby="rollup-pill-hint"
              className="rollup-pill is-selectable"
              data-terra-rollup-pill={true}
              data-terra-rollup-pill-show-focus-styles={true}
              id="rollup-pill"
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="rollup-pill-label"
              >
                Terra.pills.label.rollupPill
              </span>
            </button>
            <VisuallyHiddenText
              aria-hidden="true"
              id="rollup-pill-hint"
              text="Terra.pills.hint.rollupPill"
            >
              <span
                aria-hidden="true"
                className="visually-hidden-text"
                id="rollup-pill-hint"
              >
                Terra.pills.hint.rollupPill
              </span>
            </VisuallyHiddenText>
          </div>
        </RollUpPill>
      </InjectIntl(RollUpPill)>
    </div>
  </Pills>
</InjectIntl(Pills)>
`;
